# PersonalProjects

ExcelFilter/: ExcelFilter.sln
ExcelFilter/ExcelFilter/: ExcelFilter.csproj  Program.cs
ExcelFilter/ExcelFilter/Class/: CsvParser.cs  XlsParser.cs
ExcelFilter/ExcelFilter/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
ExcelFilter/ExcelFilter/Views/: AddFilterView.Designer.cs  AddFilterView.cs  MainFormView.Designer.cs  MainFormView.cs  MainFormView.resx  SuccesView.Designer.cs  SuccesView.cs  SuccesView.resx
babel/: CMakeLists.txt  build.sh  conan_boost_install.sh
babel/gui_src/: main.cpp
jPwdGen/: jPwdGen.sln
jPwdGen/jPwdGen/: Program.cs  PwdShowControl.Designer.cs  PwdShowControl.cs  jPwdGen.csproj  jPwdGenDataSet.Designer.cs  jPwdGenDataSet.xsd
jPwdGen/jPwdGen/Class/: PwdGenerator.cs
jPwdGen/jPwdGen/EntityF/: PwdUser.cs  Users.cs  jPwdGen.Context.cs  jPwdGen.Context.tt  jPwdGen.Designer.cs  jPwdGen.edmx  jPwdGen.edmx.diagram  jPwdGen.tt
jPwdGen/jPwdGen/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
jPwdGen/jPwdGen/Views/: ConnectionView.Designer.cs  ConnectionView.cs  ManagePwdView.Designer.cs  ManagePwdView.cs  MenuView.Designer.cs  MenuView.cs  MenuView.resx  ProfilView.Designer.cs  ProfilView.cs  PwdParamsView.Designer.cs  (+3 more)
jSudokuSolver/: Makefile  solver
jSudokuSolver/include/: solver.h
jSudokuSolver/srcs/: check_nbr.c  complete_sudoku.c  main.c  print_map.c
jSudokuSolver/sudoku/: false.su  letter.su  map1-2.su  map1.su  map3.su
